--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # Step 1: Build Docker image
+  # Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
@@ -7,22 +7,26 @@ steps:
       - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
       - '.'
 
-  # Step 2: Push Docker image to Artifact Registry
+  # Push image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
       - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
 
-  # Step 3: Run unit tests (installs requests and runs tests)
-  - name: 'python:3.9'
+  # Run tests: spin up container, test, clean up
+  - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        pip install requests && \
+        docker run -d --name test-app -p 8080:80 us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest
+        sleep 5  # give it time to start
+        pip install requests
         python -m unittest discover -s test
+        docker stop test-app
+        docker rm test-app
 
-  # Step 4: Deploy to Compute Engine VM
+  # Deploy to VM
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'compute'
