--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,44 +1,37 @@
 steps:
-  # Build Docker image
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
-      - '.'
+      [
+        'build',
+        '-t',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
+        '.'
+      ]
 
-  # Push image
+  # Step 2: Push image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'push'
-      - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
+      [
+        'push',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
+      ]
 
-  # Run tests: spin up container, test, clean up
-  - name: 'gcr.io/cloud-builders/docker'
+  # Step 3: SSH into VM and run Docker container
+  - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        docker run -d --name test-app -p 8080:80 us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest
-        sleep 5  # give it time to start
-        pip install requests
-        python -m unittest discover -s test
-        docker stop test-app
-        docker rm test-app
+        gcloud compute ssh web-server --zone=us-central1-a --command="
+          sudo docker stop my-app || true;
+          sudo docker rm my-app || true;
+          sudo docker pull us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest;
+          sudo docker run -d --name my-app -p 80:80 us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest
+        "
 
-  # Deploy to VM
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'compute'
-      - 'ssh'
-      - 'web-server'
-      - '--zone=us-central1-a'
-      - '--command'
-      - |
-        sudo docker pull us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest && \
-        sudo docker stop my-app || true && \
-        sudo docker rm my-app || true && \
-        sudo docker run -d --name my-app -p 8080:80 us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest
+images:
+  - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
 
 options:
   logging: CLOUD_LOGGING_ONLY
