--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-  # Build the Docker image
+  # Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
@@ -11,7 +11,7 @@ steps:
       '.'
     ]
 
-  # Push the image
+  # Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'push',
