--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,57 +1,61 @@
 steps:
   # ✅ Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build', 
-      '-t', 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest', 
-      '.'
-    ]
+    args:
+      [
+        'build',
+        '-t',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
+        '.'
+      ]
 
-  # ✅ Run unit tests locally before pushing
+  # ✅ Run local unit tests (before deployment)
   - name: 'python'
     entrypoint: 'python3'
     args: ['-m', 'unittest', 'discover', '-s', 'test']
     env:
       - 'APP_URL=http://localhost'
 
-  # ✅ Push Docker image
+  # ✅ Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'push', 
-      'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
-    ]
+    args:
+      [
+        'push',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
+      ]
 
-  # ✅ Terraform init
+  # ✅ Initialize Terraform
   - name: 'hashicorp/terraform'
     entrypoint: 'terraform'
     args: ['init']
 
-  # ✅ Clean previous resources (destroy)
+  # ✅ Destroy existing infrastructure (clean before deploy)
   - name: 'hashicorp/terraform'
     entrypoint: 'terraform'
     args: ['destroy', '-auto-approve']
 
-  # ✅ Apply fresh infra
+  # ✅ Apply new infrastructure
   - name: 'hashicorp/terraform'
     entrypoint: 'terraform'
     args: ['apply', '-auto-approve']
 
-  # ✅ Capture external IP of new instance
-  - name: 'hashicorp/terraform'
-    entrypoint: 'sh'
+  # ✅ Capture the external IP and save it for tests
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
     args:
       - '-c'
       - |
         terraform output -raw web_server_external_ip > ip.txt
+        cat ip.txt
 
-  # ✅ Run tests on deployed app
+  # ✅ Run tests against the deployed app
   - name: 'python'
-    entrypoint: 'sh'
+    entrypoint: 'bash'
     args:
       - '-c'
       - |
         EXTERNAL_IP=$(cat ip.txt)
-        echo "Testing deployed app at http://$EXTERNAL_IP"
+        echo "Running tests on deployed app at http://$EXTERNAL_IP"
         APP_URL=http://$EXTERNAL_IP python3 -m unittest discover -s test
 
 timeout: 1800s
