--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 options:
+  logging: CLOUD_LOGGING_ONLY
   volumes:
     - name: tf-cache
       path: /workspace/.terraform
@@ -37,7 +38,7 @@ steps:
       - name: tf-cache
         path: /workspace/.terraform
 
-  # ✅ Destroy existing infrastructure (clean before deploy)
+  # ✅ Destroy existing infrastructure
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['destroy', '-auto-approve']
@@ -53,7 +54,7 @@ steps:
       - name: tf-cache
         path: /workspace/.terraform
 
-  # ✅ Capture the external IP and save it for tests
+  # ✅ Capture external IP
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
@@ -62,7 +63,7 @@ steps:
         terraform output -raw web_server_external_ip > ip.txt
         cat ip.txt
 
-  # ✅ Run tests against the deployed app
+  # ✅ Run tests on deployed app
   - name: 'python'
     entrypoint: 'sh'
     args:
