--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,8 @@
 options:
   logging: CLOUD_LOGGING_ONLY
-  volumes:
-    - name: tf-cache
-      path: /workspace/.terraform
 
 steps:
+  # Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
@@ -12,30 +10,38 @@ steps:
       '.'
     ]
 
-  - name: 'python'
-    entrypoint: 'python3'
-    args: ['-m', 'unittest', 'discover', '-s', 'test']
-    env:
-      - 'APP_URL=http://localhost'
+  # Run unit tests inside Docker image (ensures dependencies like requests are available)
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'run',
+      '--rm',
+      'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
+      'python3', '-m', 'unittest', 'discover', '-s', 'test'
+    ]
 
+  # Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'push',
       'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
     ]
 
+  # Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['init']
 
+  # Terraform destroy (optional: remove this step if not needed on every build)
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['destroy', '-auto-approve']
 
+  # Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['apply', '-auto-approve']
 
+  # Capture external IP
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -43,5 +49,15 @@ steps:
       - |
         terraform output -raw web_server_external_ip > ip.txt
         cat ip.txt
+
+  # Run deploy test (local to build env)
+  - name: 'gcr.io/cloud-builders/curl'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        EXTERNAL_IP=$(cat ip.txt)
+        echo "Running HTTP check on http://$EXTERNAL_IP"
+        curl -f http://$EXTERNAL_IP
 
 timeout: 1800s
