--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
       '.'
     ]
 
-  # Run unit tests inside Docker image (ensures dependencies like requests are available)
+  # Run unit tests inside Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'run',
@@ -31,7 +31,7 @@ steps:
     entrypoint: 'terraform'
     args: ['init']
 
-  # Terraform destroy (optional: remove this step if not needed on every build)
+  # Terraform destroy
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['destroy', '-auto-approve']
@@ -50,15 +50,15 @@ steps:
         terraform output -raw web_server_external_ip > ip.txt
         cat ip.txt
 
-  # Run deploy test (local to build env)
-- name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      terraform output -raw web_server_external_ip > ip.txt
-      EXTERNAL_IP=$(cat ip.txt)
-      echo "External IP is $EXTERNAL_IP"
-      curl -f http://$EXTERNAL_IP || exit 1
+  # Run deploy test
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        terraform output -raw web_server_external_ip > ip.txt
+        EXTERNAL_IP=$(cat ip.txt)
+        echo "External IP is $EXTERNAL_IP"
+        curl -f http://$EXTERNAL_IP || exit 1
 
 timeout: 1800s
