--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
@@ -9,35 +10,30 @@ steps:
       '.'
     ]
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'run',
-      '--rm',
-      'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
-      'python3', '-m', 'unittest', 'discover', '-s', 'test'
-    ]
+  # Step 2: Run tests independently (fail early if tests fail)
+  - name: 'python:3.9-slim'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        pip install -r requirements.txt
+        python3 -m unittest discover -s test
 
+  # Step 3: Push Docker image (only if tests pass)
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'push',
       'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
     ]
 
+  # Step 4: Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['init']
 
+  # Step 5: Terraform apply (provision infrastructure)
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'terraform'
     args: ['apply', '-auto-approve']
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        IP=$(terraform output -raw web_server_external_ip)
-        echo "Testing deployed app at http://$IP"
-        curl -f http://$IP || (echo 'App test failed!' && exit 1)
 
 timeout: 1800s
