--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,32 +2,50 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
+  # 🚀 Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      ['build', '-t', 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest', '.']
+      [
+        'build',
+        '-t',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
+        '.'
+      ]
 
+  # 🚀 Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      ['push', 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest']
+      [
+        'push',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
+      ]
 
+  # ⚙️ Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
-      - terraform init -no-color
+      - |
+        terraform init
 
+  # ⚙️ Terraform import if needed
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
-      - terraform plan -no-color
+      - |
+        terraform state list | grep google_compute_network.vpc_network || \
+        terraform import google_compute_network.vpc_network my-vpc
 
+  # ⚙️ Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
-      - terraform apply -auto-approve -input=false -no-color
+      - |
+        terraform apply -auto-approve
 
+  # ✅ Run deploy test
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
