--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,14 +28,26 @@ steps:
       - |
         terraform init
 
-  # ⚙️ Terraform import if needed
+  # ⚙️ Terraform import existing resources if not yet managed
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
       - |
         terraform state list | grep google_compute_network.vpc_network || \
-        terraform import google_compute_network.vpc_network my-vpc
+          terraform import google_compute_network.vpc_network my-vpc
+
+        terraform state list | grep google_compute_subnetwork.public_subnet || \
+          terraform import google_compute_subnetwork.public_subnet us-central1/public-subnet
+
+        terraform state list | grep google_compute_subnetwork.private_subnet || \
+          terraform import google_compute_subnetwork.private_subnet us-central1/private-subnet
+
+        terraform state list | grep google_compute_firewall.allow_http_https || \
+          terraform import google_compute_firewall.allow_http_https my-vpc/allow-http-https
+
+        terraform state list | grep google_compute_firewall.allow_ssh_from_iap || \
+          terraform import google_compute_firewall.allow_ssh_from_iap my-vpc/allow-ssh-from-iap
 
   # ⚙️ Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
