--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
         'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
       ]
 
-  # ⚙️ Terraform init
+  # ⚙️ Terraform init (uses GCS backend configured in code)
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
@@ -28,12 +28,14 @@ steps:
       - |
         terraform init
 
-  # ⚙️ Terraform import existing resources if not yet managed
+  # ⚙️ Terraform import (only if not already in state)
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
       - |
+        PROJECT_ID=graphite-store-463414-p2
+
         terraform state list | grep google_compute_network.vpc_network || \
           terraform import google_compute_network.vpc_network my-vpc
 
@@ -44,10 +46,10 @@ steps:
           terraform import google_compute_subnetwork.private_subnet us-central1/private-subnet
 
         terraform state list | grep google_compute_firewall.allow_http_https || \
-          terraform import google_compute_firewall.allow_http_https my-vpc/allow-http-https
+          terraform import google_compute_firewall.allow_http_https projects/${PROJECT_ID}/global/firewalls/allow-http-https
 
         terraform state list | grep google_compute_firewall.allow_ssh_from_iap || \
-          terraform import google_compute_firewall.allow_ssh_from_iap my-vpc/allow-ssh-from-iap
+          terraform import google_compute_firewall.allow_ssh_from_iap projects/${PROJECT_ID}/global/firewalls/allow-ssh-from-iap
 
   # ⚙️ Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
