--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,9 +36,9 @@ steps:
       - |
         terraform validate
 
-  # ⚙️ Run import.sh using a proper image with shell
-  - name: 'gcr.io/cloud-builders/gcloud'   # <-- switched from terraform image
-    entrypoint: 'bash'
+  # ⚙️ Terraform import using script (✅ now using correct image)
+  - name: 'hashicorp/terraform:1.6.6'
+    entrypoint: 'sh'
     args:
       - '-c'
       - |
