--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,21 @@
-options:
-  logging: CLOUD_LOGGING_ONLY
-
 steps:
-  # 🚀 Build Docker image
+  # Step 1: Build and push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
         'build',
         '-t',
-        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest',
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app',
         '.'
       ]
-
-  # 🚀 Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
         'push',
-        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app:latest'
+        'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app'
       ]
 
-  # ⚠️ Manual cleanup to prevent 409 conflicts
+  # Step 2: Cleanup existing infra
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -29,42 +24,45 @@ steps:
         echo "🧹 Cleaning up existing GCP resources..."
         gcloud compute instances delete web-server --zone=us-central1-a --quiet || echo "✅ No VM found or already deleted"
         gcloud compute firewall-rules delete allow-http-https --quiet || echo "✅ No firewall allow-http-https found"
-        gcloud compute firewall-rules delete allow-ssh-from-iap --quiet || echo "✅ No firewall allow-ssh-from-iap found"
         gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || echo "✅ No private subnet found"
         gcloud compute networks delete my-vpc --quiet || echo "✅ No VPC found"
 
-  # ⚙️ Terraform init
+  # Step 3: Terraform init
+  - name: 'hashicorp/terraform:1.6.6'
+    args: ['init']
+
+  # Step 4: Terraform validate
+  - name: 'hashicorp/terraform:1.6.6'
+    args: ['validate']
+
+  # Step 5: Force unlock (in case a stale lock exists)
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
       - '-c'
       - |
-        terraform init
+        LOCK_ID=$(terraform force-unlock -force 2>&1 | grep 'ID:' | awk '{print $2}')
+        if [ -n "$LOCK_ID" ]; then
+          terraform force-unlock -force $LOCK_ID || true
+        else
+          echo "✅ No lock found to force unlock"
+        fi
 
-  # ⚙️ Terraform validate
+  # Step 6: Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        terraform validate
+    args: ['apply', '-auto-approve']
 
-  # ⚙️ Terraform apply fresh infra
-  - name: 'hashicorp/terraform:1.6.6'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        echo "🚀 Applying fresh infrastructure..."
-        terraform apply -auto-approve
-
-  # ✅ Run test script
+  # Step 7: Run app tests
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        chmod +x /workspace/run_test.sh
-        /workspace/run_test.sh
+        echo "Fetching external IP..."
+        IP=$(terraform output -raw web_server_external_ip)
+        echo "External IP: $IP"
+        APP_URL="http://$IP"
+        APP_URL=$APP_URL python3 -m unittest test/test_deploy.py
 
-timeout: 1800s
+images:
+  - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app'
