--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # Step 1: Build and push Docker image
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
@@ -8,6 +8,8 @@ steps:
         'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app',
         '.'
       ]
+
+  # Step 2: Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
@@ -15,54 +17,53 @@ steps:
         'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app'
       ]
 
-  # Step 2: Cleanup existing infra
+  # Step 3: Cleanup GCP resources (if needed)
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        echo "🧹 Cleaning up existing GCP resources..."
+        echo "🧹 Cleaning up existing resources..."
         gcloud compute instances delete web-server --zone=us-central1-a --quiet || echo "✅ No VM found or already deleted"
-        gcloud compute firewall-rules delete allow-http-https --quiet || echo "✅ No firewall allow-http-https found"
-        gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || echo "✅ No private subnet found"
+        gcloud compute firewall-rules delete allow-http-https --quiet || echo "✅ No firewall found"
+        gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || echo "✅ No subnet found"
         gcloud compute networks delete my-vpc --quiet || echo "✅ No VPC found"
 
-  # Step 3: Terraform init
+  # Step 4: Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     args: ['init']
 
-  # Step 4: Terraform validate
+  # Step 5: Terraform validate
   - name: 'hashicorp/terraform:1.6.6'
     args: ['validate']
 
-  # Step 5: Force unlock (in case a stale lock exists)
-  - name: 'hashicorp/terraform:1.6.6'
-    entrypoint: 'sh'
+  # Step 6: Unlock stale state lock (if any)
+  - name: 'gcr.io/cloud-builders/gsutil'
+    entrypoint: 'bash'
     args:
       - '-c'
       - |
-        LOCK_ID=$(terraform force-unlock -force 2>&1 | grep 'ID:' | awk '{print $2}')
-        if [ -n "$LOCK_ID" ]; then
-          terraform force-unlock -force $LOCK_ID || true
+        LOCK_FILE="gs://graphite-store-463414-p2_cloudbuild/terraform/state/default.tflock"
+        if gsutil ls $LOCK_FILE; then
+          echo "⚠️ Stale lock file found. Deleting..."
+          gsutil rm $LOCK_FILE
         else
-          echo "✅ No lock found to force unlock"
+          echo "✅ No stale lock file found"
         fi
 
-  # Step 6: Terraform apply
+  # Step 7: Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
-    args: ['apply', '-auto-approve']
+    args:
+      - 'apply'
+      - '-auto-approve'
 
-  # Step 7: Run app tests
+  # Step 8: Run tests using run_test.sh
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        echo "Fetching external IP..."
-        IP=$(terraform output -raw web_server_external_ip)
-        echo "External IP: $IP"
-        APP_URL="http://$IP"
-        APP_URL=$APP_URL python3 -m unittest test/test_deploy.py
+        chmod +x run_test.sh
+        ./run_test.sh
 
-images:
-  - 'us-central1-docker.pkg.dev/graphite-store-463414-p2/my-repo/my-app'
+timeout: 1200s # 20 minutes
