--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,25 +2,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-  # Step 1: Build Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'build',
-        '-t',
-        'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/my-app',
-        '.'
-      ]
-
-  # Step 2: Push Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/my-app'
-      ]
-
-  # Step 3: Cleanup old resources
+  # Step 1: Cleanup old resources
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -28,25 +10,25 @@ steps:
       - |
         echo "🧹 Cleaning up existing GCP resources..."
         set -e
-        gcloud compute instances delete web-server --zone=us-central1-a --quiet || true
+        gcloud compute instances delete public-web-server --zone=us-central1-a --quiet || true
         gcloud compute firewall-rules list --filter="network=my-vpc" --format="value(name)" | \
           xargs -r -n1 gcloud compute firewall-rules delete --quiet || true
         gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || true
         gcloud compute networks delete my-vpc --quiet || true
 
-  # Step 4: Terraform init
+  # Step 2: Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     args: ['init']
 
-  # Step 5: Terraform validate
+  # Step 3: Terraform validate
   - name: 'hashicorp/terraform:1.6.6'
     args: ['validate']
 
-  # Step 6: Terraform apply
+  # Step 4: Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
     args: ['apply', '-auto-approve']
 
-  # Step 7: Run tests
+  # Step 5: Run tests
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
