--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-  # Step 1: Clean up existing GCP resources
+  # Step 1: Clean up old resources
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -11,10 +11,10 @@ steps:
         echo "🧹 Cleaning up existing GCP resources..."
         set -e
         gcloud compute instances delete public-web-server --zone=us-central1-a --quiet || true
-        gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || true
-        gcloud compute networks subnets delete public-subnet --region=us-central1 --quiet || true
         gcloud compute firewall-rules list --filter="network=my-vpc" --format="value(name)" | \
           xargs -r -n1 gcloud compute firewall-rules delete --quiet || true
+        gcloud compute networks subnets delete private-subnet --region=us-central1 --quiet || true
+        gcloud compute networks subnets delete public-subnet --region=us-central1 --quiet || true
         gcloud compute networks delete my-vpc --quiet || true
 
   # Step 2: Terraform init
@@ -25,8 +25,8 @@ steps:
   - name: 'hashicorp/terraform:1.6.6'
     args: ['validate']
 
-  # Step 4: Terraform apply with lock timeout & retry
-  - name: 'gcr.io/cloud-builders/gcloud'
+  # Step 4: Terraform apply with retry logic
+  - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'bash'
     args:
       - '-c'
@@ -38,7 +38,7 @@ steps:
         done
 
   # Step 5: Run tests
-  - name: 'gcr.io/cloud-builders/gcloud'
+  - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'bash'
     args:
       - '-c'
